more tests and cleanups