@@ -32,12 +32,6 @@
   </scm>
 
   <properties>
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.core.tracing.opentelemetry/com.azure.core.tracing.opentelemetry=ALL-UNNAMED
-      --add-opens com.azure.core.tracing.opentelemetry/com.azure.core.tracing.opentelemetry=ALL-UNNAMED
-      --add-opens com.azure.core.tracing.opentelemetry/com.azure.core.tracing.opentelemetry=com.azure.core
-    </javaModulesSurefireArgLine>
-
     <!-- Enables fail on deprecated API usage. -->
     <compiler.failondeprecatedstatus/>
 
